<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50793654" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/imgLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bClose"
            android:layout_width="60dp"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:text="@string/bClose"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="278dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <Button
            android:id="@+id/bColeccion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="128dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/blue_buttons"
            android:padding="10dp"
            android:text="@string/bCol"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/bImagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bImagen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="128dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/blue_buttons"
            android:padding="10dp"
            android:text="@string/bImg"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bColeccion" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>